# youbot_description

./: CMakeLists.txt  package.xml
controller/: ros_controller.urdf.xacro
robots/: youbot.urdf.xacro  youbot_base_only.urdf.xacro  youbot_dual_arm.urdf.xacro  youbot_with_cam3d.urdf.xacro
urdf/misc/: arm_pov_mount.urdf.xacro  camera_tower.urdf.xacro
urdf/sensors/: asus_xtion_camera.gazebo.xacro  hokuyo_urg04_laser.gazebo.xacro  hokuyo_urg04_laser.urdf.xacro
urdf/youbot_arm/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro  arm_corrected_dynamics.urdf.xacro  limits.urdf.xacro  limits_corrected_dynamics.urdf.xacro
urdf/youbot_base/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
urdf/youbot_gripper/: gripper.transmission.xacro
urdf/youbot_plate/: plate.urdf.xacro
